--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<section>
 		<h2>C'est quoi JoJo's Bizarre Adventure ?</h2>
 		<article>
-			<p><aside><img align="right" src="C:/Users/hugo7/OneDrive/Documents/Travail/Première/NSI/Site html/Images/JoJo's_Bizarre_Adventure_logo.png" alt="image" height="450px" width="725px"></aside>
+			<p><aside><img align="right" src="Images/JoJo's_Bizarre_Adventure_logo.png" alt="image" height="450px" width="725px"></aside>
 			JoJo's Bizarre Adventure (ジョジョの奇妙な冒険, JoJo no kimyō na bōken?) est un manga de Hirohiko Araki.
 			Il est prépublié entre 1986 et 2004 dans l'hebdomadaire Weekly Shōnen Jump, puis depuis 2005 dans le mensuel Ultra Jump, destiné à un public plus adulte.
 			La version française est initialement publiée par J'ai lu de 2002 à 2005, puis par les éditions Tonkam depuis 2007.
