--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<header>
 		<nav>
 			<ul>
-				<li><a href="hugo-3/index.html">Acceuil</a></li>
+				<li><a href="Index.html">Acceuil</a></li>
 				<li><a href="Synopsis et personnages.html">Synopsis et Personnages</a></li>
 				<li><a href="Les pouvoirs.html">Les Pouvoirs</a></li>
 				<li><a href="Les références.html">Les Références</a></li>
