--- a/Les pouvoirs.html
+++ b/Les pouvoirs.html
@@ -8,10 +8,10 @@
 	<header>
 		<nav>
 			<ul>
-				<li><a href="C:/Users/hugo7/OneDrive/Documents/Travail/Première/NSI/Site html/Index.html">Acceuil</a></li>
-				<li><a href="C:/Users/hugo7/OneDrive/Documents/Travail/Première/NSI/Site html/Synopsis et personnages.html">Synopsis et Personnages</a></li>
-				<li><a href="C:/Users/hugo7/OneDrive/Documents/Travail/Première/NSI/Site html/Les pouvoirs.html">Les Pouvoirs</a></li>
-				<li><a href="C:/Users/hugo7/OneDrive/Documents/Travail/Première/NSI/Site html/Les références.html">Les Références</a></li>
+				<li><a href="acceuil.html">Acceuil</a></li>
+				<li><a href="Synopsis et personnages.html">Synopsis et Personnages</a></li>
+				<li><a href="Les pouvoirs.html">Les Pouvoirs</a></li>
+				<li><a href="Les références.html">Les Références</a></li>
 			</ul>
 		</nav>
 			<section>
@@ -23,8 +23,8 @@
 			<p>Dans JoJo's Bizarre Adventure on distingue deux systèmes de pouvoirs uniques :</p>
 
 				<ul>
-					<li><a href="C:/Users/hugo7/OneDrive/Documents/Travail/Première/NSI/Site html/hamon.html">L'onde solaire</a></li>
-					<li><a href="C:/Users/hugo7/OneDrive/Documents/Travail/Première/NSI/Site html/stand.html">Les stands</a></li>
+					<li><a href="hamon.html">L'onde solaire</a></li>
+					<li><a href="stand.html">Les stands</a></li>
 				</ul>
 
 		</article>
