--- a/Les références.html
+++ b/Les références.html
@@ -8,11 +8,11 @@
 	<header>
 		<nav>
 			<ul>
-				<li><a href="C:/Users/hugo7/OneDrive/Documents/Travail/Première/NSI/Site html/Index.html">Acceuil</a></li>
-				<li><a href="C:/Users/hugo7/OneDrive/Documents/Travail/Première/NSI/Site html/Synopsis et personnages.html">Synopsis et Personnages</a></li>
-				<li><a href="C:/Users/hugo7/OneDrive/Documents/Travail/Première/NSI/Site html/Les pouvoirs.html">Les Pouvoirs</a></li>
-				<li><a href="C:/Users/hugo7/OneDrive/Documents/Travail/Première/NSI/Site html/Les références.html">Les Références</a></li>
-				</ul>
+				<li><a href="acceuil.html">Acceuil</a></li>
+				<li><a href="Synopsis et personnages.html">Synopsis et Personnages</a></li>
+				<li><a href="Les pouvoirs.html">Les Pouvoirs</a></li>
+				<li><a href="Les références.html">Les Références</a></li>
+			</ul>
 		</nav>
 		<section>
 			<h1 align="center">LES REFERENCES</h1>
@@ -21,7 +21,7 @@
 	<section>
 		<h2>La mode et les "JoJo poses"</h2>
 		<article>
-			<img align="right" src="C:/Users/hugo7/OneDrive/Documents/Travail/Première/NSI/Site html/Images/jojo pose.jpg" alt="image" height="350px" width="600px">
+			<img align="right" src="Images/jojo pose.jpg" alt="image" height="350px" width="600px">
 			<p>La mode est aussi un univers qui influence énormément Araki dans son travail sur Jojo. Le mangaka n’a jamais caché son attirance pour la grande couture.
 			C’est pour cela que l’on peut retrouver de nombreux personnages dans des positions très insolites qui sont, en fait, des poses de mannequins qui ont inspiré l’auteur.
 			Ces postures insolites ont même été appelées des « Jojo poses » par les fans.
