Update Synopsis et personnages.html

--- a/Synopsis et personnages.html
+++ b/Synopsis et personnages.html
@@ -8,10 +8,10 @@
 	<header>
 		<nav>
 			<ul>
-				<li><a href="C:/Users/hugo7/OneDrive/Documents/Travail/Première/NSI/Site html/Index.html">Acceuil</a></li>
-				<li><a href="C:/Users/hugo7/OneDrive/Documents/Travail/Première/NSI/Site html/Synopsis et personnages.html">Synopsis et Personnages</a></li>
-				<li><a href="C:/Users/hugo7/OneDrive/Documents/Travail/Première/NSI/Site html/Les pouvoirs.html">Les Pouvoirs</a></li>
-				<li><a href="C:/Users/hugo7/OneDrive/Documents/Travail/Première/NSI/Site html/Les références.html">Les Références</a></li>
+				<li><a href="acceuil.html">Acceuil</a></li>
+				<li><a href="Synopsis et personnages.html">Synopsis et Personnages</a></li>
+				<li><a href="Les pouvoirs.html">Les Pouvoirs</a></li>
+				<li><a href="Les références.html">Les Références</a></li>
 			</ul>
 		</nav>
 			<section>
@@ -20,7 +20,7 @@
 	</header>
 	<section>
 		<article>
-			<img align="right" src="C:/Users/hugo7/OneDrive/Documents/Travail/Première/NSI/Site html/Images/fresque jojo.jpg" alt="image" height="450px" width="725px">
+			<img align="right" src="Images/fresque jojo.jpg" alt="image" height="450px" width="725px">
 			<p>L'histoire de JoJo's Bizarre Adventure est divisée en deux réalités alternatives qui sont elles-mêmes divisées en parties. La première va de la partie 1: Phantom Blood, à la partie 6: Stone Ocean.
 			La seconde est composée de la partie 7: Steel Ball Run, et de la partie 8: JoJolion.
 			</p>
@@ -30,14 +30,14 @@
 	</section>
 	<section>
 		<ul>Les parties (avec résumé) :
-			<li><a href="C:/Users/hugo7/OneDrive/Documents/Travail/Première/NSI/Site html/Partie 1.html">Partie 1 : Phantom Blood ;</a></li>
-			<li><a href="C:/Users/hugo7/OneDrive/Documents/Travail/Première/NSI/Site html/Partie 2.html">Partie 2 : Battle Tendency ;</a></li>
-			<li><a href="C:/Users/hugo7/OneDrive/Documents/Travail/Première/NSI/Site html/Partie 3.html">Partie 3 : Stardust Crusaders ;</a></li>
-			<li><a href="C:/Users/hugo7/OneDrive/Documents/Travail/Première/NSI/Site html/Partie 4.html">Partie 4 : Diamond is Unbreakable ;</a></li>
-			<li><a href="C:/Users/hugo7/OneDrive/Documents/Travail/Première/NSI/Site html/Partie 5.html">Partie 5 : Golden Wind ;</a></li>
-			<li><a href="C:/Users/hugo7/OneDrive/Documents/Travail/Première/NSI/Site html/Partie 6.html">Partie 6 : Stone Ocean ;</a></li>
-			<li><a href="C:/Users/hugo7/OneDrive/Documents/Travail/Première/NSI/Site html/Partie 7.html">Partie 7 : Steel Ball Run ;</a></li>
-			<li><a href="C:/Users/hugo7/OneDrive/Documents/Travail/Première/NSI/Site html/Partie 8.html">Partie 8 : JoJolion </a></li>
+			<li><a href="Partie 1.html">Partie 1 : Phantom Blood ;</a></li>
+			<li><a href="Partie 2.html">Partie 2 : Battle Tendency ;</a></li>
+			<li><a href="Partie 3.html">Partie 3 : Stardust Crusaders ;</a></li>
+			<li><a href="Partie 4.html">Partie 4 : Diamond is Unbreakable ;</a></li>
+			<li><a href="Partie 5.html">Partie 5 : Golden Wind ;</a></li>
+			<li><a href="Partie 6.html">Partie 6 : Stone Ocean ;</a></li>
+			<li><a href="Partie 7.html">Partie 7 : Steel Ball Run ;</a></li>
+			<li><a href="Partie 8.html">Partie 8 : JoJolion </a></li>
 		</ul>
 	</section>
 </body>
