--- a/Synopsis et personnages.html
+++ b/Synopsis et personnages.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <head>
 		<title> JOJO'S BIZARRE ADVENTURE</title>
-		<link rel="icon" type="image/png" sizes="20x12" href="C:/Users/hugo7/OneDrive/Documents/Travail/Première/NSI/Site html/Images/JoJo's_Bizarre_Adventure_logo.png">
+		<link rel="icon" type="image/png" sizes="20x12" href="Images/JoJo's_Bizarre_Adventure_logo.png">
 		<link href="CSS.css" rel="stylesheet">
 </head>
 <body>
