--- a/hamon.html
+++ b/hamon.html
@@ -1,17 +1,17 @@
 <!DOCTYPE HTML>
 <head>
 		<title> JOJO'S BIZARRE ADVENTURE</title>
-		<link rel="icon" type="image/png" sizes="20x12" href="C:/Users/hugo7/OneDrive/Documents/Travail/Première/NSI/Site html/Images/JoJo's_Bizarre_Adventure_logo.png">
+		<link rel="icon" type="image/png" sizes="20x12" href="Images/JoJo's_Bizarre_Adventure_logo.png">
 		<link href="CSS.css" rel="stylesheet">
 </head>
 <body>
 	<header>
 		<nav>
 			<ul>
-				<li><a href="C:/Users/hugo7/OneDrive/Documents/Travail/Première/NSI/Site html/Index.html">Acceuil</a></li>
-				<li><a href="C:/Users/hugo7/OneDrive/Documents/Travail/Première/NSI/Site html/Synopsis et personnages.html">Synopsis et Personnages</a></li>
-				<li><a href="C:/Users/hugo7/OneDrive/Documents/Travail/Première/NSI/Site html/Les pouvoirs.html">Les Pouvoirs</a></li>
-				<li><a href="C:/Users/hugo7/OneDrive/Documents/Travail/Première/NSI/Site html/Les références.html">Les Références</a></li>
+				<li><a href="acceuil.html">Acceuil</a></li>
+				<li><a href="Synopsis et personnages.html">Synopsis et Personnages</a></li>
+				<li><a href="Les pouvoirs.html">Les Pouvoirs</a></li>
+				<li><a href="Les références.html">Les Références</a></li>
 			</ul>
 		</nav>
 			<section>
@@ -19,7 +19,7 @@
 			</section>
 	<header>
 	<section>
-		<img align="right" src="C:/Users/hugo7/OneDrive/Documents/Travail/Première/NSI/Site html/Images/hamon.jpg" alt="image" height="400px" width="400px">
+		<img align="right" src="Images/hamon.jpg" alt="image" height="400px" width="400px">
 		<p>L'Onde (波紋, Hamon), est une énergie utilisée dans la forme antique des arts martiaux, le Sendō (仙道, lit. Chemin de l'Ermite / Magicien).
 		Grâce à une respiration contrôlée, une personne entraînée peut produire une énergie qui se manifeste sous forme d'ondulations dans tout son corps et qui est identique à l'énergie du Soleil,
 		en opposition polaire à l'énergie exercée par les Vampires, les Zombies et les Hommes du Pilier. L'Onde est la principale source d'énergie des héros de Phantom Blood et Battle Tendency.
