--- a/stand.html
+++ b/stand.html
@@ -1,17 +1,17 @@
 <!DOCTYPE HTML>
 <head>
 		<title> JOJO'S BIZARRE ADVENTURE</title>
-		<link rel="icon" type="image/png" sizes="20x12" href="C:/Users/hugo7/OneDrive/Documents/Travail/Première/NSI/Site html/Images/JoJo's_Bizarre_Adventure_logo.png">
+		<link rel="icon" type="image/png" sizes="20x12" href="Images/JoJo's_Bizarre_Adventure_logo.png">
 		<link href="CSS.css" rel="stylesheet">
 </head>
 <body>
 	<header>
 		<nav>
 			<ul>
-				<li><a href="C:/Users/hugo7/OneDrive/Documents/Travail/Première/NSI/Site html/Index.html">Acceuil</a></li>
-				<li><a href="C:/Users/hugo7/OneDrive/Documents/Travail/Première/NSI/Site html/Synopsis et personnages.html">Synopsis et Personnages</a></li>
-				<li><a href="C:/Users/hugo7/OneDrive/Documents/Travail/Première/NSI/Site html/Les pouvoirs.html">Les Pouvoirs</a></li>
-				<li><a href="C:/Users/hugo7/OneDrive/Documents/Travail/Première/NSI/Site html/Les références.html">Les Références</a></li>
+				<li><a href="acceuil.html">Acceuil</a></li>
+				<li><a href="Synopsis et personnages.html">Synopsis et Personnages</a></li>
+				<li><a href="Les pouvoirs.html">Les Pouvoirs</a></li>
+				<li><a href="Les références.html">Les Références</a></li>
 			</ul>
 		</nav>
 			<section>
@@ -19,7 +19,7 @@
 			</section>
 	<header>
 	<section>
-		<img align="right" src="C:/Users/hugo7/OneDrive/Documents/Travail/Première/NSI/Site html/Images/stand.png" alt="image" height="900px" width="400px">
+		<img align="right" src="Images/stand.png" alt="image" height="900px" width="400px">
 		<p>Les Stands sont définis comme des personifications de l'énergie vitale. Joseph Joestar explique que le terme "Stand" vient du fait que les Stands en général flottent aux côtés de leurs manieurs, prêt à obéir leurs ordres.
 		</p>
 		
