--- a/Partie 1.html
+++ b/Partie 1.html
@@ -1,17 +1,17 @@
 <!DOCTYPE HTML>
 <head>
 		<title> JOJO'S BIZARRE ADVENTURE</title>
-		<link rel="icon" type="image/png" sizes="20x12" href="C:/Users/hugo7/OneDrive/Documents/Travail/Première/NSI/Site html/Images/JoJo's_Bizarre_Adventure_logo.png">
+		<link rel="icon" type="image/png" sizes="20x12" href="Images/JoJo's_Bizarre_Adventure_logo.png">
 		<link href="CSS.css" rel="stylesheet">
 </head>
 <body>
 	<header>
 		<nav>
 			<ul>
-				<li><a href="C:/Users/hugo7/OneDrive/Documents/Travail/Première/NSI/Site html/Index.html">Acceuil</a></li>
-				<li><a href="C:/Users/hugo7/OneDrive/Documents/Travail/Première/NSI/Site html/Synopsis et personnages.html">Synopsis et Personnages</a></li>
-				<li><a href="C:/Users/hugo7/OneDrive/Documents/Travail/Première/NSI/Site html/Les pouvoirs.html">Les Pouvoirs</a></li>
-				<li><a href="C:/Users/hugo7/OneDrive/Documents/Travail/Première/NSI/Site html/Les références.html">Les Références</a></li>
+				<li><a href="acceuil.html">Acceuil</a></li>
+				<li><a href="Synopsis et personnages.html">Synopsis et Personnages</a></li>
+				<li><a href="Les pouvoirs.html">Les Pouvoirs</a></li>
+				<li><a href="Les références.html">Les Références</a></li>
 			</ul>
 		</nav>
 		<section>
@@ -19,7 +19,7 @@
 			</section>
 	</header>
 	<section>
-		<img align="right" src="C:/Users/hugo7/OneDrive/Documents/Travail/Première/NSI/Site html/Images/Part_1.jpg" alt="image" height="600px" width="430px">
+		<img align="right" src="Images/Part_1.jpg" alt="image" height="600px" width="430px">
 		<p>À la fin du xixe siècle en Angleterre, le jeune fils d'un riche propriétaire, Jonathan Joestar, rencontre son nouveau frère adoptif Dio Brando, qui le déteste et envisage de l'usurper comme héritier de la famille Joestar.
 		Lorsque les tentatives de Dio sont contrecarrées, il se transforme en vampire avec l'utilisation d'un ancien masque de pierre et détruit le domaine Joestar.
 		Jonathan se lance dans un voyage, rencontre de nouveaux alliés et maîtrise la technique des arts martiaux Hamon (波紋) pour arrêter Dio, qui a fait de la domination du monde son nouvel objectif.
@@ -27,14 +27,14 @@
 	</section>
 	<section>
 		<ul>Les parties (avec résumé) :
-			<li><a href="C:/Users/hugo7/OneDrive/Documents/Travail/Première/NSI/Site html/Partie 1.html">Partie 1 : Phantom Blood ;</a></li>
-			<li><a href="C:/Users/hugo7/OneDrive/Documents/Travail/Première/NSI/Site html/Partie 2.html">Partie 2 : Battle Tendency ;</a></li>
-			<li><a href="C:/Users/hugo7/OneDrive/Documents/Travail/Première/NSI/Site html/Partie 3.html">Partie 3 : Stardust Crusaders ;</a></li>
-			<li><a href="C:/Users/hugo7/OneDrive/Documents/Travail/Première/NSI/Site html/Partie 4.html">Partie 4 : Diamond is Unbreakable ;</a></li>
-			<li><a href="C:/Users/hugo7/OneDrive/Documents/Travail/Première/NSI/Site html/Partie 5.html">Partie 5 : Golden Wind ;</a></li>
-			<li><a href="C:/Users/hugo7/OneDrive/Documents/Travail/Première/NSI/Site html/Partie 6.html">Partie 6 : Stone Ocean ;</a></li>
-			<li><a href="C:/Users/hugo7/OneDrive/Documents/Travail/Première/NSI/Site html/Partie 7.html">Partie 7 : Steel Ball Run ;</a></li>
-			<li><a href="C:/Users/hugo7/OneDrive/Documents/Travail/Première/NSI/Site html/Partie 8.html">Partie 8 : JoJolion </a></li>
+			<li><a href="Partie 1.html">Partie 1 : Phantom Blood ;</a></li>
+			<li><a href="Partie 2.html">Partie 2 : Battle Tendency ;</a></li>
+			<li><a href="Partie 3.html">Partie 3 : Stardust Crusaders ;</a></li>
+			<li><a href="Partie 4.html">Partie 4 : Diamond is Unbreakable ;</a></li>
+			<li><a href="Partie 5.html">Partie 5 : Golden Wind ;</a></li>
+			<li><a href="Partie 6.html">Partie 6 : Stone Ocean ;</a></li>
+			<li><a href="Partie 7.html">Partie 7 : Steel Ball Run ;</a></li>
+			<li><a href="Partie 8.html">Partie 8 : JoJolion </a></li>
 		</ul>
 	</section>
 </body>
