--- a/Partie 2.html
+++ b/Partie 2.html
@@ -1,23 +1,23 @@
 <!DOCTYPE HTML>
 <head>
 		<title> JOJO'S BIZARRE ADVENTURE</title>
-		<link rel="icon" type="image/png" sizes="20x12" href="C:/Users/hugo7/OneDrive/Documents/Travail/Première/NSI/Site html/Images/JoJo's_Bizarre_Adventure_logo.png">
+		<link rel="icon" type="image/png" sizes="20x12" href="Images/JoJo's_Bizarre_Adventure_logo.png">
 		<link href="CSS.css" rel="stylesheet">
 </head>
 <body>
 	<header>
 		<nav>
 			<ul>
-				<li><a href="C:/Users/hugo7/OneDrive/Documents/Travail/Première/NSI/Site html/Index.html">Acceuil</a></li>
-				<li><a href="C:/Users/hugo7/OneDrive/Documents/Travail/Première/NSI/Site html/Synopsis et personnages.html">Synopsis et Personnages</a></li>
-				<li><a href="C:/Users/hugo7/OneDrive/Documents/Travail/Première/NSI/Site html/Les pouvoirs.html">Les Pouvoirs</a></li>
-				<li><a href="C:/Users/hugo7/OneDrive/Documents/Travail/Première/NSI/Site html/Les références.html">Les Références</a></li>
+				<li><a href="acceuil.html">Acceuil</a></li>
+				<li><a href="Synopsis et personnages.html">Synopsis et Personnages</a></li>
+				<li><a href="Les pouvoirs.html">Les Pouvoirs</a></li>
+				<li><a href="Les références.html">Les Références</a></li>
 			</ul>
 		</nav>
 		<h1 align="center">BATTLE TENDENCY</h1>
 	</header>
 	<section>
-		<img align="right" src="C:/Users/hugo7/OneDrive/Documents/Travail/Première/NSI/Site html/Images/Part_2.jpg" alt="image" height="600px" width="400px">
+		<img align="right" src="Images/Part_2.jpg" alt="image" height="600px" width="400px">
 		<p>En 1938, une expédition allemande découvre et réveille un homme du pilier, un puissant humanoïde dont la race a créé le Masque de Pierre.
 		L'homme du pilier tue les chercheurs et s'échappe pour réveiller les autres hommes du pilier afin qu'ils puissent reprendre la domination sur l'humanité en obtenant la pierre rouge d'Aja.
 		Joseph Joestar, le petit-fils de Jonathan, s'unit avec de nouveaux alliés et maîtres du Hamon pour vaincre les hommes du pilier.
