--- a/Partie 3.html
+++ b/Partie 3.html
@@ -1,23 +1,23 @@
 <!DOCTYPE HTML>
 <head>
 		<title> JOJO'S BIZARRE ADVENTURE</title>
-		<link rel="icon" type="image/png" sizes="20x12" href="C:/Users/hugo7/OneDrive/Documents/Travail/Première/NSI/Site html/Images/JoJo's_Bizarre_Adventure_logo.png">
+		<link rel="icon" type="image/png" sizes="20x12" href="Images/JoJo's_Bizarre_Adventure_logo.png">
 		<link href="CSS.css" rel="stylesheet">
 </head>
 <body>
 	<header>
 		<nav>
 			<ul>
-				<li><a href="C:/Users/hugo7/OneDrive/Documents/Travail/Première/NSI/Site html/Index.html">Acceuil</a></li>
-				<li><a href="C:/Users/hugo7/OneDrive/Documents/Travail/Première/NSI/Site html/Synopsis et personnages.html">Synopsis et Personnages</a></li>
-				<li><a href="C:/Users/hugo7/OneDrive/Documents/Travail/Première/NSI/Site html/Les pouvoirs.html">Les Pouvoirs</a></li>
-				<li><a href="C:/Users/hugo7/OneDrive/Documents/Travail/Première/NSI/Site html/Les références.html">Les Références</a></li>
+				<li><a href="acceuil.html">Acceuil</a></li>
+				<li><a href="Synopsis et personnages.html">Synopsis et Personnages</a></li>
+				<li><a href="Les pouvoirs.html">Les Pouvoirs</a></li>
+				<li><a href="Les références.html">Les Références</a></li>
 			</ul>
 		</nav>
 		<h1 align="center">STARDUST CRUSADERS</h1>
 	</header>
 	<section>
-		<img align="right" src="C:/Users/hugo7/OneDrive/Documents/Travail/Première/NSI/Site html/Images/Part_3.jpg" alt="image" height="600px" width="400px">
+		<img align="right" src="Images/Part_3.jpg" alt="image" height="600px" width="400px">
 		<p>En 1989, Dio Brando (maintenant appelé "DIO") se réveille après que sa tombe ait été récupérée au fond de l'océan. Parce que DIO avait réussi à capturer le corps de Jonathan,
 		les descendants de Jonathan, composés de Joseph, sa fille Holly Kujo et son petit-fils Jotaro Kujo, se sont éveillés au pouvoir des Stands (スタンド, Sutando).
 		Cependant, Holly est incapable de faire face à son propre stand et il ne lui reste plus que 50 jours à vivre. Jotaro, Joseph et leurs nouveaux alliés se mettent alors en route pour vaincre DIO avant l'expiration de ce délai et rencontrent les hommes de main de DIO en cours de route.
