--- a/Partie 4.html
+++ b/Partie 4.html
@@ -1,23 +1,23 @@
 <!DOCTYPE HTML>
 <head>
 		<title> JOJO'S BIZARRE ADVENTURE</title>
-		<link rel="icon" type="image/png" sizes="20x12" href="C:/Users/hugo7/OneDrive/Documents/Travail/Première/NSI/Site html/Images/JoJo's_Bizarre_Adventure_logo.png">
+		<link rel="icon" type="image/png" sizes="20x12" href="Images/JoJo's_Bizarre_Adventure_logo.png">
 		<link href="CSS.css" rel="stylesheet">
 </head>
 <body>
 	<header>
 		<nav>
 			<ul>
-				<li><a href="C:/Users/hugo7/OneDrive/Documents/Travail/Première/NSI/Site html/Index.html">Acceuil</a></li>
-				<li><a href="C:/Users/hugo7/OneDrive/Documents/Travail/Première/NSI/Site html/Synopsis et personnages.html">Synopsis et Personnages</a></li>
-				<li><a href="C:/Users/hugo7/OneDrive/Documents/Travail/Première/NSI/Site html/Les pouvoirs.html">Les Pouvoirs</a></li>
-				<li><a href="C:/Users/hugo7/OneDrive/Documents/Travail/Première/NSI/Site html/Les références.html">Les Références</a></li>
+				<li><a href="acceuil.html">Acceuil</a></li>
+				<li><a href="Synopsis et personnages.html">Synopsis et Personnages</a></li>
+				<li><a href="Les pouvoirs.html">Les Pouvoirs</a></li>
+				<li><a href="Les références.html">Les Références</a></li>
 			</ul>
 		</nav>
 		<h1 align="center">DIAMOND IS UNBREAKABLE</h1>
 	</header>
 	<section>
-		<img align="right" src="C:/Users/hugo7/OneDrive/Documents/Travail/Première/NSI/Site html/Images/Part_4.jpg" alt="image" height="600px" width="400px">
+		<img align="right" src="Images/Part_4.jpg" alt="image" height="600px" width="400px">
 		<p>En 1999, la famille Joestar apprend que Joseph a un fils illégitime, Josuke Higashikata qui vit dans la ville japonaise fictive de Morioh.
 		Josuke apprend l'existence d'un arc et d'une flèche mystiques qui confère des Stands à ceux qui sont frappés par ses pointes de flèches.
 		Alors qu'ils traquent l'arc et la flèche, Josuke et ses alliés rencontrent une menace sérieuse d'un tueur en série utilisant un Stand, Yoshikage Kira.
