--- a/Partie 5.html
+++ b/Partie 5.html
@@ -1,23 +1,23 @@
 <!DOCTYPE HTML>
 <head>
 		<title> JOJO'S BIZARRE ADVENTURE</title>
-		<link rel="icon" type="image/png" sizes="20x12" href="C:/Users/hugo7/OneDrive/Documents/Travail/Première/NSI/Site html/Images/JoJo's_Bizarre_Adventure_logo.png">
+		<link rel="icon" type="image/png" sizes="20x12" href="Images/JoJo's_Bizarre_Adventure_logo.png">
 		<link href="CSS.css" rel="stylesheet">
 </head>
 <body>
 	<header>
 		<nav>
 			<ul>
-				<li><a href="C:/Users/hugo7/OneDrive/Documents/Travail/Première/NSI/Site html/Index.html">Acceuil</a></li>
-				<li><a href="C:/Users/hugo7/OneDrive/Documents/Travail/Première/NSI/Site html/Synopsis et personnages.html">Synopsis et Personnages</a></li>
-				<li><a href="C:/Users/hugo7/OneDrive/Documents/Travail/Première/NSI/Site html/Les pouvoirs.html">Les Pouvoirs</a></li>
-				<li><a href="C:/Users/hugo7/OneDrive/Documents/Travail/Première/NSI/Site html/Les références.html">Les Références</a></li>
+				<li><a href="acceuil.html">Acceuil</a></li>
+				<li><a href="Synopsis et personnages.html">Synopsis et Personnages</a></li>
+				<li><a href="Les pouvoirs.html">Les Pouvoirs</a></li>
+				<li><a href="Les références.html">Les Références</a></li>
 			</ul>
 		</nav>
 		<h1 align="center">GOLDEN WIND</h1>
 	</header>
 	<section>
-		<img align="right" src="C:/Users/hugo7/OneDrive/Documents/Travail/Première/NSI/Site html/Images/Part_5.png" alt="image" height="600px" width="475px">
+		<img align="right" src="Images/Part_5.png" alt="image" height="600px" width="475px">
 		<p>En 2001, à Naples, Giorno Giovanna est officiellement le fils de DIO mais descend biologiquement de Jonathan Joestar.
 		Giorno cherche à devenir un chef de la mafia afin d'éliminer les trafiquants de drogue qui vendent leurs marchandises aux enfants. Son équipe, composée d'utilisateurs de Stands,
 		doit affronter le chef de la mafia Diavolo et protéger sa fille Trish Una, que Diavolo a l'intention de tuer pour cacher son identité.
