--- a/Partie 8.html
+++ b/Partie 8.html
@@ -1,23 +1,23 @@
 <!DOCTYPE HTML>
 <head>
 		<title> JOJO'S BIZARRE ADVENTURE</title>
-		<link rel="icon" type="image/png" sizes="20x12" href="C:/Users/hugo7/OneDrive/Documents/Travail/Première/NSI/Site html/Images/JoJo's_Bizarre_Adventure_logo.png">
+		<link rel="icon" type="image/png" sizes="20x12" href="Images/JoJo's_Bizarre_Adventure_logo.png">
 		<link href="CSS.css" rel="stylesheet">
 </head>
 <body>
 	<header>
 		<nav>
 			<ul>
-				<li><a href="C:/Users/hugo7/OneDrive/Documents/Travail/Première/NSI/Site html/Index.html">Acceuil</a></li>
-				<li><a href="C:/Users/hugo7/OneDrive/Documents/Travail/Première/NSI/Site html/Synopsis et personnages.html">Synopsis et Personnages</a></li>
-				<li><a href="C:/Users/hugo7/OneDrive/Documents/Travail/Première/NSI/Site html/Les pouvoirs.html">Les Pouvoirs</a></li>
-				<li><a href="C:/Users/hugo7/OneDrive/Documents/Travail/Première/NSI/Site html/Les références.html">Les Références</a></li>
+				<li><a href="acceuil.html">Acceuil</a></li>
+				<li><a href="Synopsis et personnages.html">Synopsis et Personnages</a></li>
+				<li><a href="Les pouvoirs.html">Les Pouvoirs</a></li>
+				<li><a href="Les références.html">Les Références</a></li>
 			</ul>
 		</nav>
 		<h1 align="center">JOJOLION</h1>
 	</header>
 		<section>
-		<img align="right" src="C:/Users/hugo7/OneDrive/Documents/Travail/Première/NSI/Site html/Images/Part_8.jfif" alt="image" height="600px" width="425px">
+		<img align="right" src="Images/Part_8.jfif" alt="image" height="600px" width="425px">
 		<p>Dans le même univers que Steel Ball Run, en 2012, la ville de Morioh a été dévastée par le séisme de 2011 de la côte Pacifique du Tōhoku, qui a provoqué l'apparition de failles mystérieuses et d'étranges édifices connus sous le nom de murs qui voient.
 		L'étudiante Yasuho Hirose découvre un jeune homme souffrant d'amnésie enfoui dans les décombres et le surnomme "Josuke". Josuke tente de découvrir le secret de son passé et découvre qu'il est le résultat d'une fusion de deux personnes.
 		Josuke est également confronté aux activités d'un syndicat local du crime, qui vend le fruit d'un mystérieux arbre Rokakaka, capable de guérir les gens et de « prendre » quelque chose en retour.
