--- a/Partie 3.html
+++ b/Partie 3.html
@@ -25,14 +25,14 @@
 	</section>
 	<section>
 		<ul>Les parties (avec résumé) :
-			<li><a href="C:/Users/hugo7/OneDrive/Documents/Travail/Première/NSI/Site html/Partie 1.html">Partie 1 : Phantom Blood ;</a></li>
-			<li><a href="C:/Users/hugo7/OneDrive/Documents/Travail/Première/NSI/Site html/Partie 2.html">Partie 2 : Battle Tendency ;</a></li>
-			<li><a href="C:/Users/hugo7/OneDrive/Documents/Travail/Première/NSI/Site html/Partie 3.html">Partie 3 : Stardust Crusaders ;</a></li>
-			<li><a href="C:/Users/hugo7/OneDrive/Documents/Travail/Première/NSI/Site html/Partie 4.html">Partie 4 : Diamond is Unbreakable ;</a></li>
-			<li><a href="C:/Users/hugo7/OneDrive/Documents/Travail/Première/NSI/Site html/Partie 5.html">Partie 5 : Golden Wind ;</a></li>
-			<li><a href="C:/Users/hugo7/OneDrive/Documents/Travail/Première/NSI/Site html/Partie 6.html">Partie 6 : Stone Ocean ;</a></li>
-			<li><a href="C:/Users/hugo7/OneDrive/Documents/Travail/Première/NSI/Site html/Partie 7.html">Partie 7 : Steel Ball Run ;</a></li>
-			<li><a href="C:/Users/hugo7/OneDrive/Documents/Travail/Première/NSI/Site html/Partie 8.html">Partie 8 : JoJolion </a></li>
+			<li><a href="Partie 1.html">Partie 1 : Phantom Blood ;</a></li>
+			<li><a href="Partie 2.html">Partie 2 : Battle Tendency ;</a></li>
+			<li><a href="Partie 3.html">Partie 3 : Stardust Crusaders ;</a></li>
+			<li><a href="Partie 4.html">Partie 4 : Diamond is Unbreakable ;</a></li>
+			<li><a href="Partie 5.html">Partie 5 : Golden Wind ;</a></li>
+			<li><a href="Partie 6.html">Partie 6 : Stone Ocean ;</a></li>
+			<li><a href="Partie 7.html">Partie 7 : Steel Ball Run ;</a></li>
+			<li><a href="Partie 8.html">Partie 8 : JoJolion </a></li>
 		</ul>
 	</section>
 </body>
